# Symfony-Python-Websocket-Bundle

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  README.md  docker-compose.brokers.yaml  docker-compose.local.yaml  docker-compose.prod.yaml  docker-compose.read-write-gateways.yaml  docker-compose.realtime-core.yaml  docker-compose.rust-gateway.yaml  docker-compose.ws-gateway.core.yaml  docker-compose.ws-gateway.terminator.yaml  docker-compose.yaml
gateway/: Dockerfile  requirements.txt
gateway/app/: main.py
gateway/app/services/: __init__.py  app.py  auth.py  backpressure.py  broker.py  connections.py  events.py  logging_service.py  message.py  metrics.py  ordering.py  presence.py  rate_limit.py  replay.py  settings.py  snowflake.py  tracing.py  webhook.py
rust_gateway/: Cargo.toml
rust_gateway/src/services/: app.rs  broker.rs  connections.rs  events.rs  message.rs  mod.rs  redis_batch.rs  settings.rs  snowflake.rs  utils.rs
scripts/: bench_gateway_http.js  bench_gateway_http.sh  bench_gateway_ws.js  bench_gateway_ws.sh  demo_message_flow.sh  push_demo.sh  smoke_test_gateway.sh  tracing_e2e_check.sh  tracing_runtime_check.sh  ws_client.py
symfony/: Dockerfile  composer.json
symfony/config/: bundles.php  framework.yaml  routes.yaml  services.yaml
symfony/config/routes/: api.yaml  attributes.yaml
symfony/public/: index.php
symfony/src/: Kernel.php
symfony/src/Controller/: ChatDemoController.php  DemoController.php  WsDemoController.php
symfony/src/EventListener/: WsMessageListener.php
traefik/: traefik.prod.yml  traefik.yml
(+28 files in other folders)
