[package]
name = "rust_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
redis = { version = "0.27", features = ["tokio-comp"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
thiserror = "1"
regex = "1"
sha1 = "0.10"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
lapin = { version = "2.3", default-features = false, features = ["rustls"] }
dashmap = "5"
